update sequence of portfolio items

--- a/index.html
+++ b/index.html
@@ -82,43 +82,25 @@
             </div>
             <div class="row">
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal8" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                <i>Primal Space</i>
+                                <i>Ripple Blossom</i>
+                                <p style="font-size: 12px"><i>(GGJ2017 HK Site, Best Theme Integration Award)</i></p>
                             </div>
                         </div>
-                        <img src="resources/images/portfolio/1primalSpace.png" class="img-responsive" alt="">
+                        <img src="resources/images/portfolio/8-ripple-blossom.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                <i>Zombie town</i>
+                                <i>Primal Life</i>
+                                <p style="font-size: 12px"><i>(Completed in November)</i></p>
                             </div>
                         </div>
-                        <img src="resources/images/portfolio/2zombieTown.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i>Tomb Victims</i>
-                            </div>
-                        </div>
-                        <img src="resources/images/portfolio/3tombVictims.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i>YiCon</i>
-                            </div>
-                        </div>
-                        <img src="resources/images/portfolio/4yiCon.png" class="img-responsive" alt="">
+                        <img src="resources/images/portfolio/6primalLife.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -132,16 +114,25 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                <i>Primal Life</i>
-                                <p><i>(Completed in November)</i></p>
+                                <i>YiCon</i>
                             </div>
                         </div>
-                        <img src="resources/images/portfolio/6primalLife.png" class="img-responsive" alt="">
+                        <img src="resources/images/portfolio/4yiCon.png" class="img-responsive" alt="">
                     </a>
                 </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i>Primal Space</i>
+                            </div>
+                        </div>
+                        <img src="resources/images/portfolio/1primalSpace.png" class="img-responsive" alt="">
+                    </a>
+                </div>    
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal7" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -152,17 +143,30 @@
                         <img src="resources/images/portfolio/7conferenceMGT.png" class="img-responsive" alt="">
                     </a>
                 </div>
+
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal8" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
-                                <i>Ripple Blossom</i>
-                                <p style="font-size: 12px"><i>(GGJ2017 HK Site, Best Theme Integration Award)</i></p>
+                                <i>Zombie town</i>
+                                <p style="font-size: 12px">(demo)</p>
                             </div>
                         </div>
-                        <img src="resources/images/portfolio/8-ripple-blossom/title.png" class="img-responsive" alt="">
+                        <img src="resources/images/portfolio/2zombieTown.png" class="img-responsive" alt="">
                     </a>
                 </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i>Tomb Victims</i>
+                                <p style="font-size: 12px">(demo)</p>
+                            </div>
+                        </div>
+                        <img src="resources/images/portfolio/3tombVictims.png" class="img-responsive" alt="">
+                    </a>
+                </div>
+                
             </div>
         </div>
     </section>
