Add the archive page

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                     <li class="page-scroll">
                         <a href="#about">About</a>
                     </li>
+                    <li class="page-scroll">
+                        <a href="archive.html">Archive</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -132,18 +135,7 @@
                         </div>
                         <img src="resources/images/portfolio/1primalSpace.png" class="img-responsive" alt="">
                     </a>
-                </div>    
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal7" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i>Collaborate Conference Scheduling Web Application</i>
-                            </div>
-                        </div>
-                        <img src="resources/images/portfolio/7conferenceMGT.png" class="img-responsive" alt="">
-                    </a>
                 </div>
-
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -166,7 +158,16 @@
                         <img src="resources/images/portfolio/3tombVictims.png" class="img-responsive" alt="">
                     </a>
                 </div>
-                
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolioModal7" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i>Collaborate Conference Scheduling Web Application</i>
+                            </div>
+                        </div>
+                        <img src="resources/images/portfolio/7conferenceMGT.png" class="img-responsive" alt="">
+                    </a>
+                </div>
             </div>
         </div>
     </section>
