--- a/archive.html
+++ b/archive.html
@@ -124,7 +124,7 @@
             <div class="games">
                 <p class="game" id="primalSpaceWebGL">
                     <span class="gameName">Primal Space!</span>
-                    <span class="gameGenre">Unity</span>
+                    <span class="gameGenre">WebGL</span>
                     <span class="gameRate">04/2016</span>
                 </p>
             </div>
@@ -150,6 +150,31 @@
                         <span class="gameName">POEM</span>
                         <span class="gameGenre">Web App</span>
                         <span class="gameRate">01/2016</span>
+                    </a>
+                </p>
+            </div>
+            <!--
+            <p class="game">
+                <span class="gameName"></span>
+                <span class="gameGenre"></span>
+                <span class="gameRate"></span>
+            </p>
+            -->
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <div class="year">
+                Game Analysis Articles
+                <span class="expand">+</span>
+            </div>
+
+            <div class="games">
+                <p class="game">
+                    <a href = "articles/a-comparative-study/index.html" style="color:black">
+                        <span class="gameName" style="overflow: hidden">A Comparative Study on Spore and Pokemon GO</span>
+                        <span class="gameRate">12/2017</span>
                     </a>
                 </p>
             </div>
