--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Yidi Zhu 2016. Adapted from <a href="http://startbootstrap.com/template-overviews/freelancer">Freelancer Theme</a>
+                        Copyright &copy; Yidi Zhu 2016. Adapted from <a href="http://startbootstrap.com/template-overviews/freelancer">Freelancer Theme</a>. <a href="https://github.com/zhuyidiwow/zhuyidiwow.github.io">Full Source Code</a>
                     </div>
                 </div>
             </div>
