--- a/rb/index.html
+++ b/rb/index.html
@@ -9,7 +9,7 @@
     </style>
   </head>
   <body>
-  <p>Please wait for the game to complete loading. You may need to zoom your broswer.</p>
+  <p>Please wait for the game to complete loading. You may need to zoom your browser.</p>
     <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" height="1080px" width="1920px"></canvas>
     <script type='text/javascript'>
   var Module = {
