--- a/ggj2017.html
+++ b/ggj2017.html
@@ -39,6 +39,8 @@
 <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header page-scroll">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
                     data-target="#bs-example-navbar-collapse-1">
@@ -59,8 +61,13 @@
                 <li class="page-scroll">
                     <a href="http://www.yidizhu.com/#about">About</a>
                 </li>
+                <li class="page-scroll">
+                        <a href="archive.html">Archive</a>
+                </li>
             </ul>
         </div>
+        <!-- /.navbar-collapse -->
+    </div>
         <!-- /.navbar-collapse -->
     </div>
     <!-- /.container-fluid -->
