--- a/yicon.html
+++ b/yicon.html
@@ -59,6 +59,9 @@
                 <li class="page-scroll">
                     <a href="http://www.yidizhu.com/#about">About</a>
                 </li>
+                <li class="page-scroll">
+                        <a href="archive.html">Archive</a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
