Registering Google Search Console

--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Yidi Zhu | Dual Balance</title>
+    <title>Yidi Zhu | Welcome, lost souls</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
