--- a/index.html
+++ b/index.html
@@ -724,6 +724,18 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <!-- Theme JavaScript -->
     <script src="js/freelancer.min.js"></script>
+
+    <!-- Begin Web-Stat code v 6.2 -->
+<span id="wts1434529">&nbsp;</span><script type="text/javascript">
+var wts=document.createElement('script');wts.type='text/javascript';
+wts.async=true;wts.src=('https:'==document.location.protocol?'https://server2':'http://lb')
++'.web-stat.com/1/1434529/log6_2.js';
+document.getElementById('wts1434529').appendChild(wts);
+</script><noscript><a href="http://www.web-stat.com">
+<img src="//server2.web-stat.com/6/1/1434529.gif" 
+style="border:0px;" alt=""></a></noscript>
+<!-- End Web-Stat code v 6.2 -->
+
 </body>
 
 </html>
