Hide traffic analysis

--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@ wts.async=true;wts.src=('https:'==document.location.protocol?'https://server2':'
 document.getElementById('wts1434529').appendChild(wts);
 </script><noscript><a href="http://www.web-stat.com">
 <img src="//server2.web-stat.com/6/1/1434529.gif" 
-style="border:0px;" alt=""></a></noscript>
+style="border:0px;display:none" alt=""></a></noscript>
 <!-- End Web-Stat code v 6.2 -->
 
 </body>
