Remove traffic monitor

--- a/index.html
+++ b/index.html
@@ -725,7 +725,9 @@
     <!-- Theme JavaScript -->
     <script src="js/freelancer.min.js"></script>
 
-    <!-- Begin Web-Stat code v 6.2 -->
+
+    <!-- Begin Web-Stat code v 6.2 
+
 <span id="wts1434529">&nbsp;</span><script type="text/javascript">
 var wts=document.createElement('script');wts.type='text/javascript';
 wts.async=true;wts.src=('https:'==document.location.protocol?'https://server2':'http://lb')
@@ -734,7 +736,8 @@ document.getElementById('wts1434529').appendChild(wts);
 </script><noscript><a href="http://www.web-stat.com">
 <img src="//server2.web-stat.com/6/1/1434529.gif" 
 style="border:0px;display:none" alt=""></a></noscript>
-<!-- End Web-Stat code v 6.2 -->
+
+ End Web-Stat code v 6.2 -->
 
 </body>
 
