Adjust the test page

--- a/test.html
+++ b/test.html
@@ -38,7 +38,7 @@
 <div class="container" style="padding-top:100px">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-            <div class="modal-body">
+            <div class="modal-body" style="font-size: 120%">
                 <h2> Instructions </h2>
                 <p>
                     Thank you for joining the test session for my final year project. Your participation is highly appreciated.
