--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div class="intro-text">
                         <span class="name">Yidi Zhu</span>
                         <hr class="star-light">
-                        <span class="intro">I want to spend my whole life making games.</span>
+                        <span class="intro">A game designer and developer.</span>
                     </div>
                 </div>
             </div>
@@ -197,6 +197,7 @@
         </div>
     </section>
     <!-- About Section -->
+    <!--
     <section class="success" id="about">
         <div class="container">
             <div class="row">
@@ -223,6 +224,7 @@
             </div>
         </div>
     </section>
+    -->
     <!-- Footer -->
     <footer class="text-center">
         <div class="footer-above">
