--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                         <a href="#portfolio">Portfolio</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">About</a>
+                        <a href="https://medium.com/yidis-blog">Blog <i class="fa fa-external-link" aria-hidden="true"></i></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="archive.html">Archive</a>
+                        <a href="archive.html">Archive <i class="fa fa-external-link" aria-hidden="true"></i></a>
                     </li>
                 </ul>
             </div>
@@ -64,11 +64,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" style="width:512px; height:512px" src="resources/images/profile_svg.svg" alt="">
+                    <!--<img class="img-responsive" style="width:512px; height:512px" src="resources/images/profile_svg.svg" alt=""> -->
                     <div class="intro-text">
                         <span class="name">Yidi Zhu</span>
                         <hr class="star-light">
-                        <span class="intro">A game designer and developer.</span>
+                        <span class="intro">Games are handcrafts. I'm a craftsman.</span>
                     </div>
                 </div>
             </div>
@@ -171,7 +171,9 @@
             </div>
         </div>
     </section>
+
     <!-- News Section -->
+    <!--
     <section id="news">
         <div class="container">
             <div class="row">
@@ -196,6 +198,7 @@
             </div>
         </div>
     </section>
+    -->
     <!-- About Section -->
     <!--
     <section class="success" id="about">
