--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <!-- Theme CSS -->
     <link href="css/freelancer.css" rel="stylesheet">
     <!-- Custom Fonts -->
-    <script src="https://use.fontawesome.com/4f62781ef4.js"></script>
+
+    <!-- <script src="https://use.fontawesome.com/4f62781ef4.js"></script> -->
+    <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merriweather:300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lora" rel="stylesheet">
@@ -136,6 +138,8 @@
                         <img src="resources/images/portfolio/1primalSpace.png" class="img-responsive" alt="">
                     </a>
                 </div>
+
+                <!--
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
@@ -158,6 +162,7 @@
                         <img src="resources/images/portfolio/3tombVictims.png" class="img-responsive" alt="">
                     </a>
                 </div>
+                -->
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal7" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
