--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <link href="css/freelancer.css" rel="stylesheet">
     <!-- Custom Fonts -->
 
-    <!-- <script src="https://use.fontawesome.com/4f62781ef4.js"></script> -->
     <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merriweather:300" rel="stylesheet">
@@ -204,6 +203,7 @@
         </div>
     </section>
     -->
+
     <!-- About Section -->
     <!--
     <section class="success" id="about">
@@ -233,6 +233,7 @@
         </div>
     </section>
     -->
+
     <!-- Footer -->
     <footer class="text-center">
         <div class="footer-above">
@@ -240,8 +241,8 @@
                 <div class="row">
                     <div class="footer-col col-md-6">
                         <h3>Location</h3>
-                        <p>The Hong Kong Polytechnic University
-                            <br>Hung Hom, Hong Kong, China, 999077</p>
+                        <p>Entertainment Technology Center, Carnegie Mellon University
+                            <br>Pittsburgh, PA, United States, 15217</p>
                     </div>
                     <div class="footer-col col-md-6">
                         <h3>Contact</h3>
@@ -263,7 +264,6 @@
                                     class="fa fa-envelope"></i></a>
                             </li>
                         </ul>
-                        Please let me know if you find any bugs on this site, thanks!
                     </div>
                 </div>
             </div>
@@ -272,7 +272,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Yidi Zhu 2016. Adapted from <a href="http://startbootstrap.com/template-overviews/freelancer">Freelancer Theme</a>. <a href="https://github.com/zhuyidiwow/zhuyidiwow.github.io">Full Source Code</a>
+                        Copyright &copy; Yidi Zhu 2017. Adapted from <a href="http://startbootstrap.com/template-overviews/freelancer">Freelancer Theme</a>. <a href="https://github.com/zhuyidiwow/zhuyidiwow.github.io">Full Source Code</a>
                     </div>
                 </div>
             </div>
@@ -734,21 +734,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <!-- Theme JavaScript -->
     <script src="js/freelancer.min.js"></script>
-
-
-    <!-- Begin Web-Stat code v 6.2 
-
-<span id="wts1434529">&nbsp;</span><script type="text/javascript">
-var wts=document.createElement('script');wts.type='text/javascript';
-wts.async=true;wts.src=('https:'==document.location.protocol?'https://server2':'http://lb')
-+'.web-stat.com/1/1434529/log6_2.js';
-document.getElementById('wts1434529').appendChild(wts);
-</script><noscript><a href="http://www.web-stat.com">
-<img src="//server2.web-stat.com/6/1/1434529.gif" 
-style="border:0px;display:none" alt=""></a></noscript>
-
- End Web-Stat code v 6.2 -->
-
 </body>
-
 </html>
