--- a/index.html
+++ b/index.html
@@ -52,8 +52,14 @@
                         <a href="https://medium.com/yidis-blog">Blog <i class="fa fa-external-link" aria-hidden="true"></i></a>
                     </li>
                     <li class="page-scroll">
+                        <a href="resources/resume.pdf">Resume <i class="fa fa-external-link" aria-hidden="true"></i></a>
+                    </li>
+                    <!--
+                    <li class="page-scroll">
                         <a href="archive.html">Archive <i class="fa fa-external-link" aria-hidden="true"></i></a>
                     </li>
+                    -->
+                    
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
