--- a/index.html
+++ b/index.html
@@ -269,6 +269,9 @@
                                 <a href="mailto:zhuyidiwow@gmail.com" class="btn-social btn-outline"><i
                                     class="fa fa-envelope"></i></a>
                             </li>
+                            <li>
+                                <a href="https://www.linkedin.com/in/yidi-zhu-22233a94/" class="btn-social btn-outline"> <i class="fa fa-linkedin-square" aria-hidden="true"></i> </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
