delete old work

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
                         As a game developer, I am fascinated with the art of programming and is always willing to
                             pick up new skills and experiment with new technologies. I am currently studying computer
-                            graphics and C++ independently is my free time.
+                            graphics and C++ independently in my free time.
                     </p>
                 </div>
             </div>
@@ -107,57 +107,57 @@
         </div>
         <div class="row">
             <div class="col-sm-4 portfolio-item">
-                <a href="#portfolioModal8" class="portfolio-link" data-toggle="modal">
+                <a href="https://www.yidizhu.com/ripple-blossom.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
                             <i>Ripple Blossom</i>
                         </div>
                     </div>
-                    <img src="resources/images/portfolio/8-ripple-blossom.png" class="img-responsive" alt="">
+                    <img src="resources/images/portfolio/ripple-blossom.png" class="img-responsive" alt="">
                 </a>
                 <p class="portfolio-title">Indie Game | <i>Designer & Programmer</i></p>
             </div>
             <div class="col-sm-4 portfolio-item">
-                <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
+                <a href="https://www.yidizhu.com/primal-life.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
                             <i>Primal Life</i>
                         </div>
                     </div>
-                    <img src="resources/images/portfolio/6primalLife.png" class="img-responsive" alt="">
+                    <img src="resources/images/portfolio/primal-life.png" class="img-responsive" alt="">
                 </a>
                 <p class="portfolio-title">Course Project | <i>Designer & Programmer</i></p>
             </div>
             <div class="col-sm-4 portfolio-item">
-                <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
+                <a href="https:///www.yidzhu.com/dual-balance.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
                             <i>Dual Balance</i>
                         </div>
                     </div>
-                    <img src="resources/images/portfolio/5dualBalance.png" class="img-responsive" alt="">
+                    <img src="resources/images/portfolio/dual-balance.png" class="img-responsive" alt="">
                 </a>
                 <p class="portfolio-title">Course Project | <i>Designer & Programmer</i></p>
             </div>
             <div class="col-sm-4 portfolio-item">
-                <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+                <a href="https://www.yidzhu.com/yicon.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
                             <i>YiCon</i>
                         </div>
                     </div>
-                    <img src="resources/images/portfolio/4yiCon.png" class="img-responsive" alt="">
+                    <img src="resources/images/portfolio/yicon.png" class="img-responsive" alt="">
                 </a>
                 <p class="portfolio-title">Research Project | <i>Solo Developer</i></p>
             </div>
             <div class="col-sm-4 portfolio-item">
-                <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                <a href="https://www.yidizhu.com/primal-space.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
                             <i>Primal Space</i>
                         </div>
                     </div>
-                    <img src="resources/images/portfolio/1primalSpace.png" class="img-responsive" alt="">
+                    <img src="resources/images/portfolio/primal-space.png" class="img-responsive" alt="">
                 </a>
                 <p class="portfolio-title">Course Project | <i>Designer & Programmer</i></p>
             </div>
