--- a/404.html
+++ b/404.html
@@ -34,6 +34,44 @@
 </head>
 
 <body id="page-top" class="index">
+<!-- Navigation -->
+<nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
+    <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header page-scroll">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+            </button>
+            <a class="navbar-brand" href="index.html">Yidi Zhu</a>
+        </div>
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+                <li class="hidden">
+                    <a href="#page-top"></a>
+                </li>
+                <li class="page-scroll">
+                    <a href="https://www.yidizhu.com/#portfolio">Portfolio</a>
+                </li>
+                <li class="page-scroll">
+                    <a href="https://medium.com/yidis-blog" target="_blank">Blog <i class="fa fa-external-link" aria-hidden="true"></i></a>
+                </li>
+                <li class="page-scroll">
+                    <a href="resources/resume.pdf" target="_blank">Resume <i class="fa fa-external-link" aria-hidden="true"></i></a>
+                </li>
+                <!--
+                <li class="page-scroll">
+                    <a href="archive.html">Archive <i class="fa fa-external-link" aria-hidden="true"></i></a>
+                </li>
+                -->
+
+            </ul>
+        </div>
+        <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+</nav>
 
 <div class="container" style="padding-top:100px">
     <div class="row">
