--- a/yicon.html
+++ b/yicon.html
@@ -46,7 +46,6 @@
             </button>
             <a class="navbar-brand" href="index.html">Yidi Zhu</a>
         </div>
-
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
@@ -54,14 +53,20 @@
                     <a href="#page-top"></a>
                 </li>
                 <li class="page-scroll">
-                    <a href="http://www.yidizhu.com/#portfolio">Portfolio</a>
+                    <a href="https://www.yidizhu.com/#portfolio">Portfolio</a>
                 </li>
                 <li class="page-scroll">
-                    <a href="http://www.yidizhu.com/#about">About</a>
+                    <a href="https://medium.com/yidis-blog" target="_blank">Blog <i class="fa fa-external-link" aria-hidden="true"></i></a>
                 </li>
                 <li class="page-scroll">
-                        <a href="archive.html">Archive</a>
+                    <a href="resources/resume.pdf" target="_blank">Resume <i class="fa fa-external-link" aria-hidden="true"></i></a>
                 </li>
+                <!--
+                <li class="page-scroll">
+                    <a href="archive.html">Archive <i class="fa fa-external-link" aria-hidden="true"></i></a>
+                </li>
+                -->
+
             </ul>
         </div>
         <!-- /.navbar-collapse -->
