--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Hind:400,500" rel="stylesheet">
     <!-- <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
           type="text/css"> -->
@@ -106,6 +106,55 @@
             </div>
         </div>
         <div class="row">
+
+             <div class="col-sm-4 portfolio-item">
+                <a href="https://www.yidizhu.com/the-sea.html" class="portfolio-link" data-toggle="modal">
+                    <div class="caption">
+                        <div class="caption-content">
+                            <i>Maestro</i>
+                        </div>
+                    </div>
+                    <img src="resources/images/portfolio/maestro.png" class="img-responsive" alt="">
+                </a>
+                <p class="portfolio-title">BVW Round 2 | <i>Producer & Programmer </i></p>
+            </div>
+
+            <div class="col-sm-4 portfolio-item">
+                <a href="https://www.yidizhu.com/the-sea.html" class="portfolio-link" data-toggle="modal">
+                    <div class="caption">
+                        <div class="caption-content">
+                            <i>Bop It Extreme Home Edition</i>
+                        </div>
+                    </div>
+                    <img src="resources/images/portfolio/bopit.png" class="img-responsive" alt="">
+                </a>
+                <p class="portfolio-title">BVW Round 3 | <i>Carpentar & Programmer</i></p>
+            </div>
+
+            <div class="col-sm-4 portfolio-item">
+                <a href="https://www.yidizhu.com/the-sea.html" class="portfolio-link" data-toggle="modal">
+                    <div class="caption">
+                        <div class="caption-content">
+                            <i>The Soundbearier</i>
+                        </div>
+                    </div>
+                    <img src="resources/images/portfolio/sound-bearier.png" class="img-responsive" alt="">
+                </a>
+                <p class="portfolio-title">BVW Round 1 | <i>Programmer </i></p>
+            </div>
+
+            <div class="col-sm-4 portfolio-item">
+                <a href="https://www.yidizhu.com/the-sea.html" class="portfolio-link" data-toggle="modal">
+                    <div class="caption">
+                        <div class="caption-content">
+                            <i>The Sea</i>
+                        </div>
+                    </div>
+                    <img src="resources/images/portfolio/the-sea.png" class="img-responsive" alt="">
+                </a>
+                <p class="portfolio-title">BVW Round 0 | <i>Solo Developer </i></p>
+            </div>
+
             <div class="col-sm-4 portfolio-item">
                 <a href="https://www.yidizhu.com/ripple-blossom.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
@@ -117,6 +166,7 @@
                 </a>
                 <p class="portfolio-title">Indie Game | <i>Designer & Programmer</i></p>
             </div>
+
             <div class="col-sm-4 portfolio-item">
                 <a href="https://www.yidizhu.com/primal-life.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
@@ -128,6 +178,7 @@
                 </a>
                 <p class="portfolio-title">Course Project | <i>Designer & Programmer</i></p>
             </div>
+
             <div class="col-sm-4 portfolio-item">
                 <a href="https:///www.yidzhu.com/dual-balance.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
@@ -139,6 +190,7 @@
                 </a>
                 <p class="portfolio-title">Course Project | <i>Designer & Programmer</i></p>
             </div>
+
             <div class="col-sm-4 portfolio-item">
                 <a href="https://www.yidzhu.com/yicon.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
@@ -150,6 +202,7 @@
                 </a>
                 <p class="portfolio-title">Research Project | <i>Solo Developer</i></p>
             </div>
+
             <div class="col-sm-4 portfolio-item">
                 <a href="https://www.yidizhu.com/primal-space.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
