Add new game pages

--- a/404.html
+++ b/404.html
@@ -43,7 +43,7 @@
                     data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand" href="index.html">Yidi Zhu</a>
+            <a class="navbar-brand" href="https://www.yidizhu.com">Yidi Zhu</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -73,12 +73,16 @@
     <!-- /.container-fluid -->
 </nav>
 
-<div class="container" style="padding-top:100px">
+<div class="container">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
-            <div class="modal-body">
-                <p style="text-align: center">
-                    Seems you are lost, travler. <br>
+            <div class="not-found-text">
+                <h2>404 Not Found!</h2>
+                <hr class="star-light">
+                <p>
+                    Seems you are lost, travler.
+                </p>
+                <p>
                     Maybe you want to look at my <a href="http://www.yidizhu.com/#portfolio"> portfolio</a> or <a href="http://www.yidizhu.com/articles/fyp"> read something interesting</a>?
                 </p>
             </div>
