--- a/index.html
+++ b/index.html
@@ -8,24 +8,18 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Yidi Zhu</title>
+
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
     <!-- Theme CSS -->
     <link href="css/freelancer.css" rel="stylesheet">
-    <!-- Custom Fonts -->
 
+    <!-- Custom Fonts -->
     <link rel="stylesheet" href="vendor/font-awesome/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Hind:400,500" rel="stylesheet">
-    <!-- <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
-          type="text/css"> -->
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
 
 <body id="page-top" class="index">
@@ -38,7 +32,7 @@
                     data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand" href="index.html">Yidi Zhu</a>
+            <a class="navbar-brand" href="https://www.yidizhu.com">Yidi Zhu</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -77,7 +71,7 @@
                     <span class="quote">Games are handcrafts. I'm a craftsman.</span>
                     <hr class="star-light">
                     <p class="bio col-lg-8 col-lg-offset-2 text-center">
-                        Hi there, I'm Yidi! I am a passionate game designer and developer. I dedicate myself to making
+                        Hi there, I'm Yidi! I am a passionate <b>game designer and developer</b>. I dedicate myself to making
                             intrinsically fun and meaningful games, and hopes to enter the game industry as a game designer or gameplay
                             engineer.
                         <br> <br>
@@ -100,15 +94,15 @@
 <section id="portfolio">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12 text-center">
+            <div class="col-md-12 text-center">
                 <h2>Portfolio</h2>
                 <hr class="star-primary">
             </div>
         </div>
         <div class="row">
 
-             <div class="col-sm-4 portfolio-item">
-                <a href="https://www.yidizhu.com/the-sea.html" class="portfolio-link" data-toggle="modal">
+             <div class="col-md-4 portfolio-item">
+                <a href="https://www.yidizhu.com/maestro.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
                             <i>Maestro</i>
@@ -119,8 +113,8 @@
                 <p class="portfolio-title">BVW Round 2 | <i>Producer & Programmer </i></p>
             </div>
 
-            <div class="col-sm-4 portfolio-item">
-                <a href="https://www.yidizhu.com/the-sea.html" class="portfolio-link" data-toggle="modal">
+            <div class="col-md-4 portfolio-item">
+                <a href="https://www.yidizhu.com/bopit.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
                             <i>Bop It Extreme Home Edition</i>
@@ -131,8 +125,8 @@
                 <p class="portfolio-title">BVW Round 3 | <i>Carpentar & Programmer</i></p>
             </div>
 
-            <div class="col-sm-4 portfolio-item">
-                <a href="https://www.yidizhu.com/the-sea.html" class="portfolio-link" data-toggle="modal">
+            <div class="col-md-4 portfolio-item">
+                <a href="https://www.yidizhu.com/sound-bearier.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
                             <i>The Soundbearier</i>
@@ -143,7 +137,7 @@
                 <p class="portfolio-title">BVW Round 1 | <i>Programmer </i></p>
             </div>
 
-            <div class="col-sm-4 portfolio-item">
+            <div class="col-md-4 portfolio-item">
                 <a href="https://www.yidizhu.com/the-sea.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
@@ -155,7 +149,7 @@
                 <p class="portfolio-title">BVW Round 0 | <i>Solo Developer </i></p>
             </div>
 
-            <div class="col-sm-4 portfolio-item">
+            <div class="col-md-4 portfolio-item">
                 <a href="https://www.yidizhu.com/ripple-blossom.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
@@ -167,7 +161,7 @@
                 <p class="portfolio-title">Indie Game | <i>Designer & Programmer</i></p>
             </div>
 
-            <div class="col-sm-4 portfolio-item">
+            <div class="col-md-4 portfolio-item">
                 <a href="https://www.yidizhu.com/primal-life.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
@@ -179,7 +173,7 @@
                 <p class="portfolio-title">Course Project | <i>Designer & Programmer</i></p>
             </div>
 
-            <div class="col-sm-4 portfolio-item">
+            <div class="col-md-4 portfolio-item">
                 <a href="https:///www.yidzhu.com/dual-balance.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
@@ -191,7 +185,7 @@
                 <p class="portfolio-title">Course Project | <i>Designer & Programmer</i></p>
             </div>
 
-            <div class="col-sm-4 portfolio-item">
+            <div class="col-md-4 portfolio-item">
                 <a href="https://www.yidzhu.com/yicon.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
@@ -203,7 +197,7 @@
                 <p class="portfolio-title">Research Project | <i>Solo Developer</i></p>
             </div>
 
-            <div class="col-sm-4 portfolio-item">
+            <div class="col-md-4 portfolio-item">
                 <a href="https://www.yidizhu.com/primal-space.html" class="portfolio-link" data-toggle="modal">
                     <div class="caption">
                         <div class="caption-content">
