--- a/sound-bearier.html
+++ b/sound-bearier.html
@@ -70,82 +70,26 @@
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2">
             <article>
-                <h2>Ripple Blossom</h2>
+                <h2>Website construction in progress</h2>
                 <hr class="star-primary">
+                <p class="notes">You know what, coding website is fun!</p>
+                <p>
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent risus odio, interdum cursus leo ut, feugiat posuere arcu. Proin aliquam et ante sit amet suscipit. Pellentesque et sapien metus. Proin porta turpis ut maximus facilisis. Quisque lacinia tortor tempus tortor vestibulum, sed varius augue vulputate. Integer at magna risus. Curabitur condimentum a risus elementum congue. Integer sit amet est accumsan, viverra arcu at, mollis ante. Aenean id nisl in quam mattis ornare fermentum et leo. Praesent et leo eget diam accumsan blandit lobortis in metus. Duis sed nibh et velit aliquet fringilla malesuada in lacus. Mauris auctor massa et eleifend pretium. Ut ornare, magna et eleifend hendrerit, elit magna finibus enim, vitae rutrum lacus urna in est. Nullam quis justo sed dui tristique gravida. Sed ullamcorper quis ante non facilisis.
 
-                <div>
-                    <p>
-                        <img src="resources/images/portfolio/8-ripple-blossom/title.png" class="img-responsive">
-                    </p>
-                    <p>
-                        <i>Ripple Blossom</i> was first prototyped during Global Game Jam 2017 Hong Kong site, under the theme of "Waves". This was my first game jam and first time working in ! However, our team got the <b>Best Theme Integration</b> award!
-                    </p>
-
-                    <p> 
-                        The theme of this year is <i>"waves"</i>. We made a <a href="http://globalgamejam.org/2017/games/ripple-blossom-king-salted-fish">game</a> about ripples in a pool. Players use the power of ripples to wave sleeping lotus. Here is the video.
-                    </p>
-
-                    <p>
-                        <div class='video-wrapper'>
-                        <iframe class="video" src="https://www.youtube.com/embed/UWv2LWJ9d3Q" frameborder="0" allowfullscreen></iframe>
-                        </div>
-                    </p>
-                    
-                    <p>
-                        And here is the download page! You can also play online <a href="rb/index.html">here</a>.
-                    </p>
-
-                    <h3>Dev Team</h3>
-                    <p> 
-                        <img src="resources/images/news/ggj-members.jpg" class="img-responsive">
-                    </p>
-
-                    <p>
-                        We have six members in our team, all were  the Hong Kong Polytechnic University. Our roles are:
-                    </p>
-
-                    <ol>
-                        <li> <i>Liu Chang:</i> UI Designer </li>
-                    
-                        <li> <i>Tian Yuxuan:</i> Artist </li>
-
-                        <li> <i>Zhao Tianyi:</i> Level and audio designer </li>
-
-                        <li> <i>Zhu Yidi (me):</i> Gameplay designer and engineer </li>
-
-                        <li> <i>Peng Tao:</i> System architect </li>
-
-                        <li> <i>Chen Yuji:</i> Artist </li>
-                    </ol>
-
-                    <h3>Setting </h3>
-                    <p>
-                        Our game is set in a pool. Lotus and lotus leaves are floating on the water, and fishes are swimming around.
-
-                    </p>
-                    <p>
-                <img src="resources/images/portfolio/8-ripple-blossom/static.png" class="img-responsive">
-                </p>
-
-                    <h3>Game play </h3>
-                    <p>
-                        When you type in the water, you spawn a wave there. Waves expand and intersect at sleeping lotus. If two waves intersect at a pink lotus, the pink lotus will be waken.
-                    </p>
-
-                    <h3>Goal </h3>
-                    <p>
-                        Your goal is to use the power of waves to wave all lotus in the pool. The less waves you spawn, the better.
-                    </p>
-                    <p>
-                <img src="resources/images/portfolio/8-ripple-blossom/waken.png" class="img-responsive">
-                </p>
-
-                    <h3>Art Style </h3>
-                    <p>
-                        We created a traditional Chinese art style with low polygon graphics. Every piece of artwork is made during these two days. Chinese instruments are selected for the background music.
-                    </p>
-
-                </div>
+</p>
+<p class="notes">Almost as fun as making games!</p>
+<p>
+Pellentesque neque sem, hendrerit ut pharetra ultrices, volutpat vitae nunc. Morbi vulputate erat eros, eget posuere ipsum pretium ut. Praesent ac tellus neque. Pellentesque nec fringilla sem, fermentum accumsan lectus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut vitae tristique odio. Donec odio diam, egestas eu felis vitae, mollis euismod nisl. Mauris imperdiet urna mauris, eget dapibus ex pharetra sed. Nulla laoreet tristique lacus, vel aliquet est commodo in. Cras consectetur purus at suscipit volutpat. Donec in interdum mi. Cras ut sem et sapien efficitur tristique. Duis a sagittis lacus. Vivamus pharetra a ex molestie hendrerit. Vivamus at sapien vehicula lorem viverra condimentum.
+</p>
+<p>
+Proin euismod auctor nisl, id placerat massa blandit sed. Ut aliquam in tellus non varius. Vivamus dignissim tempus erat, ultrices tempus metus pretium sit amet. Vestibulum pulvinar, urna hendrerit pretium dignissim, arcu erat mattis augue, sed tempor quam urna ut tellus. Mauris lobortis dolor in sem egestas, ut pharetra ipsum suscipit. Morbi pulvinar elit at leo tempor iaculis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse eleifend vitae dui rutrum efficitur. Aliquam ornare malesuada urna, non tristique justo posuere sit amet. Proin egestas ligula eu tellus commodo vulputate. Nam sit amet condimentum odio. Mauris suscipit cursus consequat.
+</p>
+<p>
+Sed feugiat imperdiet nibh dictum tincidunt. Praesent in sollicitudin est. Nam vel metus a mauris fermentum ultrices. Morbi semper massa eu leo egestas, vitae maximus ex dictum. Donec convallis dignissim dolor vitae auctor. Maecenas facilisis congue lacus vitae efficitur. Aliquam sit amet orci augue. Pellentesque porta, risus placerat eleifend molestie, ipsum sapien convallis magna, et dictum velit tellus in enim. Vivamus condimentum diam in mi semper, et facilisis erat sagittis. Praesent posuere rhoncus quam, at pretium urna sollicitudin sed. Integer ut urna sit amet dolor eleifend consequat at eget elit.
+</p>
+<p>
+Pellentesque eget arcu volutpat, mollis lectus vel, lobortis nisl. Praesent vitae hendrerit arcu. Nam interdum lacus eros, volutpat sollicitudin ipsum maximus non. Cras lobortis nibh vel mattis mattis. Fusce egestas porttitor leo quis tempor. Nunc ullamcorper mi in neque blandit sagittis. Nam porta vehicula tortor quis tempus. Sed dictum est tortor, sed maximus magna dapibus id. Donec efficitur, dui vel faucibus molestie, ipsum dui ultricies ex, varius consequat risus nunc ac ligula. Duis ultrices ligula ut orci elementum, et fringilla nisl convallis. Praesent quis libero felis. In eget odio at mi ornare sollicitudin. In tempor ex ante, vitae accumsan erat placerat auctor. Cras vel nisi a lectus consectetur euismod. Donec dui eros, vehicula non sagittis nec, ultrices in enim.
+</p>
 
             </article>
 
